--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
   <h1>Vocabolario Italiano–Dialetto Reggiano</h1>
   <input type="text" id="search" placeholder="Cerca una parola...">
+  <button id="playAllBtn">▶️ Riproduci tutto</button>
   <ul id="results"></ul>
   <script src="script.js"></script>
 </body>
