--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
   <input type="text" id="searchInput" placeholder="Cerca una parola in italiano...">
   <button id="playAllBtn">▶️ Riproduci tutto</button>
+  <button id="stopBtn">⏹️ Stop</button>
+  <div id="nowPlaying"></div>
+
 
   <div id="results"></div>
 
