--- a/index.html
+++ b/index.html
@@ -19,11 +19,22 @@
     <select id="styleSelector">
       <option value="glow">Glow luminoso</option>
       <option value="shadow">Ombra animata</option>
+      <option value="neon">Neon verde</option>
+      <option value="rainbow">Arcobaleno</option>
     </select>
   </div>
 
   <div id="nowPlaying"></div>
-  <div id="results"></div>
+
+  <div id="results">
+    <!-- Esempio di parole -->
+    <span class="word">Cà bela</span>
+    <span class="word">Al dòm</span>
+    <span class="word">Gnòc</span>
+    <span class="word">Sgurbì</span>
+    <span class="word">Tgnìr</span>
+    <!-- Puoi aggiungere altre parole qui -->
+  </div>
 
   <!-- Carica lo script alla fine -->
   <script src="script.js"></script>
