--- a/index.html
+++ b/index.html
@@ -28,6 +28,20 @@
     <span class="word">Sgurbì</span>
     <span class="word">Brusadèla</span>
     <span class="word">Tgnént</span>
+    <span class="word">Sòta</span>
+    <span class="word">Bèla fiòla</span>
+    <span class="word">Strèla</span>
+    <span class="word">Mónd</span>
+    <span class="word">Pòca</span>
+    <span class="word">Zóca</span>
+    <span class="word">Tàca</span>
+    <span class="word">Fóra</span>
+    <span class="word">Màgna</span>
+    <span class="word">Sgàrbia</span>
+    <span class="word">Tròpa</span>
+    <span class="word">Bóca</span>
+    <span class="word">Sgàta</span>
+    <span class="word">Ciópa</span>
   </div>
 
   <script src="script.js"></script>
