--- a/index.html
+++ b/index.html
@@ -1,36 +1,153 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-    <meta charset="UTF-8">
-    <title>Dizionario Reggiano</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  <meta charset="UTF-8">
+  <title>Dizionario Reggiano</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to right, #1e3c72, #2a5298);
+      color: white;
+    }
+
+    .overlay {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      z-index: 0;
+    }
+
+    main {
+      position: relative;
+      z-index: 1;
+      padding: 1rem;
+      max-width: 600px;
+      margin: auto;
+      background-color: rgba(0, 0, 0, 0.6);
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+    }
+
+    h1, h2, h3, p {
+      text-align: center;
+      margin: 0.5rem 0;
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+    }
+
+    input, textarea, button {
+      padding: 0.5rem;
+      border-radius: 5px;
+      border: none;
+      font-size: 1rem;
+    }
+
+    button {
+      background-color: #f0c000;
+      color: black;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    audio {
+      margin-top: 0.5rem;
+      width: 100%;
+    }
+
+    a {
+      color: #f0c000;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
-    <h1>📘 Dizionario Reggiano</h1>
+  <div class="overlay"></div>
 
-    <section class="frase">
-        <h2>📌 Frase del Giorno</h2>
-        <p><strong>Dialetto:</strong> {{ parola }}</p>
-        <p><strong>Italiano:</strong> {{ info.traduzione }}</p>
-        <p><strong>Spiegazione:</strong> {{ info.spiegazione }}</p>
-        {% if info.audio %}
-            <audio controls>
-                <source src="{{ url_for('static', filename='audio/' + info.audio) }}" type="audio/mpeg">
-                Il tuo browser non supporta l'audio.
-            </audio>
-        {% endif %}
+  <!-- Musica di sottofondo -->
+  <audio id="introAudio" autoplay muted loop>
+    <source src="{{ url_for('static', filename='audio/intro.mp3') }}" type="audio/mpeg">
+    Il tuo browser non supporta l'audio.
+  </audio>
+
+  <main>
+    <header>
+      <h1>Dizionario Reggiano</h1>
+      <p>Scopri ogni giorno una parola del dialetto reggiano</p>
+    </header>
+
+    <section>
+      <h2>Parola del Giorno</h2>
+      <h3>{{ parola }}</h3>
+      <p><strong>Traduzione:</strong> {{ info.traduzione }}</p>
+      <p><strong>Spiegazione:</strong> {{ info.spiegazione }}</p>
+      {% if info.audio %}
+        <audio controls aria-label="Ascolta la pronuncia">
+          <source src="{{ url_for('static', filename='audio/' ~ info.audio) }}" type="audio/mpeg">
+        </audio>
+      {% endif %}
     </section>
 
-    <section class="form">
-        <h2>💡 Proponi una nuova voce</h2>
-        <form action="{{ url_for('proponi') }}" method="post">
-            <input type="text" name="dialetto" placeholder="Frase in dialetto" required>
-            <input type="text" name="italiano" placeholder="Traduzione italiana" required>
-            <input type="text" name="spiegazione" placeholder="Spiegazione" required>
-            <button type="submit">📨 Invia</button>
-        </form>
+    <section>
+      <h2>Proponi una nuova voce</h2>
+      <form action="{{ url_for('proponi') }}" method="post">
+        <input id="dialetto" name="dialetto" placeholder="Parola in dialetto" required>
+        <input id="italiano" name="italiano" placeholder="Traduzione in italiano" required>
+        <textarea id="spiegazione" name="spiegazione" placeholder="Spiegazione (opzionale)"></textarea>
+        <button type="submit">Invia</button>
+      </form>
     </section>
 
-    <p><a href="{{ url_for('dizionario') }}">📖 Vai al Dizionario</a></p>
+    <p style="text-align:center; margin-top:1rem;">
+      <a href="{{ url_for('dizionario') }}">📘 Vai al dizionario completo</a>
+    </p>
+  </main>
+
+  <!-- Script dissolvenza audio -->
+  <script>
+    const audio = document.getElementById("introAudio");
+
+    window.addEventListener("DOMContentLoaded", () => {
+      audio.muted = false;
+      audio.volume = 1.0;
+      audio.play().catch(() => {
+        console.log("Autoplay bloccato dal browser");
+      });
+    });
+
+    function fadeOutAudio() {
+      const fadeInterval = setInterval(() => {
+        if (audio.volume > 0.01) {
+          audio.volume -= 0.01;
+        } else {
+          audio.pause();
+          clearInterval(fadeInterval);
+        }
+      }, 50);
+    }
+
+    function handleInteraction() {
+      fadeOutAudio();
+      window.removeEventListener("keydown", handleInteraction);
+      window.removeEventListener("click", handleInteraction);
+      window.removeEventListener("touchstart", handleInteraction);
+    }
+
+    window.addEventListener("keydown", handleInteraction);
+    window.addEventListener("click", handleInteraction);
+    window.addEventListener("touchstart", handleInteraction);
+  </script>
 </body>
 </html>
