--- a/index.html
+++ b/index.html
@@ -2,8 +2,18 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <title>Dizionario Reggiano</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dizionario Reggiano</title>
+
+  <!-- Icone e splash screen -->
+  <link rel="icon" href="{{ url_for('static', filename='icons/rofaldo.png') }}" type="image/png">
+  <link rel="apple-touch-icon" href="{{ url_for('static', filename='icons/rofaldo.png') }}">
+  <link rel="apple-touch-startup-image" href="{{ url_for('static', filename='icons/splash.png') }}">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="Dizionario Reggiano">
+
+  <!-- Stili -->
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   <style>
     body {
@@ -25,17 +35,15 @@
     main {
       position: relative;
       z-index: 1;
-      padding: 1rem;
-      max-width: 600px;
+      padding: 2rem;
+      max-width: 800px;
       margin: auto;
       background-color: rgba(0, 0, 0, 0.6);
       border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.3);
     }
 
-    h1, h2, h3, p {
+    h1, h2 {
       text-align: center;
-      margin: 0.5rem 0;
     }
 
     form {
@@ -94,23 +102,32 @@
       <p><strong>Traduzione:</strong> {{ info.traduzione }}</p>
       <p><strong>Spiegazione:</strong> {{ info.spiegazione }}</p>
       {% if info.audio %}
-        <audio controls aria-label="Ascolta la pronuncia">
-          <source src="{{ url_for('static', filename='audio/' ~ info.audio) }}" type="audio/mpeg">
-        </audio>
-      {% endif %}
+  <audio controls aria-label="Ascolta la pronuncia">
+    <source src="{{ url_for('static', filename='audio/' ~ info.audio) }}" type="audio/mpeg">
+    Il tuo browser non supporta l'audio.
+  </audio>
+{% else %}
+  <p><em>Audio non disponibile</em></p>
+{% endif %}
     </section>
 
     <section>
       <h2>Proponi una nuova voce</h2>
       <form action="{{ url_for('proponi') }}" method="post">
-        <input id="dialetto" name="dialetto" placeholder="Parola in dialetto" required>
-        <input id="italiano" name="italiano" placeholder="Traduzione in italiano" required>
-        <textarea id="spiegazione" name="spiegazione" placeholder="Spiegazione (opzionale)"></textarea>
+        <label for="dialetto">Parola in dialetto</label>
+        <input id="dialetto" name="dialetto" placeholder="Es. biölch" required>
+
+        <label for="italiano">Traduzione in italiano</label>
+        <input id="italiano" name="italiano" placeholder="Es. villico" required>
+
+        <label for="spiegazione">Spiegazione (opzionale)</label>
+        <textarea id="spiegazione" name="spiegazione" placeholder="Contesto, uso, curiosità..."></textarea>
+
         <button type="submit">Invia</button>
       </form>
     </section>
 
-    <p style="text-align:center; margin-top:1rem;">
+    <p style="text-align:center; margin-top:2rem;">
       <a href="{{ url_for('dizionario') }}">📘 Vai al dizionario completo</a>
     </p>
   </main>
@@ -126,7 +143,10 @@
         console.log("Autoplay bloccato dal browser");
       });
     });
-
+    window.onload = () => {
+  audio.muted = false;
+  audio.play().catch(() => {});
+};
     function fadeOutAudio() {
       const fadeInterval = setInterval(() => {
         if (audio.volume > 0.01) {
